@@ -52,7 +52,7 @@ date_helper_pm: pm
 number_helper_unit: "€"
 number_helper_separator: "," #unit separator (between integer part and fraction part)
 number_helper_delimiter: "." #delimiter between each group of thousands. Example: 1.234.567 
-number_helper_order: [unit, number] #order is at present unsupported in Rails
+number_helper_order: [number, unit] #order is at present unsupported in Rails
 #to support for instance French format, the order is different: Unit comes last (ex. "1.234,00 €")
 
 # use by +Array#to_sentence()+
